commit translated contents

--- a/docs/docs-ref-autogen/excel_1_1/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_1/toc.yml
@@ -54,7 +54,7 @@ items:
           - name: 图标集
             uid: ''
             items: []
-          - name: 应用程序
+          - name: Application
             uid: 'excel!Excel.Application:class'
           - name: Binding
             uid: 'excel!Excel.Binding:class'
@@ -268,8 +268,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
