--- a/docs/docs-ref-autogen/excel_1_10/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_10/toc.yml
@@ -346,7 +346,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: 应用程序
+          - name: Application
             uid: 'excel!Excel.Application:class'
           - name: AutoFilter
             uid: 'excel!Excel.AutoFilter:class'
@@ -570,7 +570,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选器
+          - name: 筛选
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -702,7 +702,7 @@ items:
             uid: 'excel!Excel.SettableColumnProperties:interface'
           - name: SettableRowProperties
             uid: 'excel!Excel.SettableRowProperties:interface'
-          - name: 设置
+          - name: Setting
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
@@ -942,8 +942,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
