--- a/docs/docs-ref-autogen/excel_1_2/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_2/toc.yml
@@ -116,7 +116,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: 应用程序
+          - name: Application
             uid: 'excel!Excel.Application:class'
           - name: Binding
             uid: 'excel!Excel.Binding:class'
@@ -180,7 +180,7 @@ items:
             uid: 'excel!Excel.CommentMention:interface'
           - name: CommentRichContent
             uid: 'excel!Excel.CommentRichContent:interface'
-          - name: 筛选器
+          - name: 筛选
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -362,8 +362,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
