--- a/docs/docs-ref-autogen/excel_1_6/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_6/toc.yml
@@ -148,7 +148,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: 应用程序
+          - name: Application
             uid: 'excel!Excel.Application:class'
           - name: Binding
             uid: 'excel!Excel.Binding:class'
@@ -262,7 +262,7 @@ items:
             uid: 'excel!Excel.CustomXmlPartScopedCollection:class'
           - name: DataBarConditionalFormat
             uid: 'excel!Excel.DataBarConditionalFormat:class'
-          - name: 筛选器
+          - name: 筛选
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -318,7 +318,7 @@ items:
             uid: 'excel!Excel.SelectionChangedEventArgs:interface'
           - name: 会话
             uid: 'excel!Excel.Session:class'
-          - name: 设置
+          - name: Setting
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
@@ -468,8 +468,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
