--- a/docs/docs-ref-autogen/excel_1_8/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_8/toc.yml
@@ -226,7 +226,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: 应用程序
+          - name: Application
             uid: 'excel!Excel.Application:class'
           - name: BasicDataValidation
             uid: 'excel!Excel.BasicDataValidation:interface'
@@ -398,7 +398,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选器
+          - name: 筛选
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -482,7 +482,7 @@ items:
             uid: 'excel!Excel.SelectionChangedEventArgs:interface'
           - name: 会话
             uid: 'excel!Excel.Session:class'
-          - name: 设置
+          - name: Setting
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
@@ -664,8 +664,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
