--- a/docs/docs-ref-autogen/onenote/toc.yml
+++ b/docs/docs-ref-autogen/onenote/toc.yml
@@ -25,7 +25,7 @@ items:
                 uid: 'onenote!OneNote.PageContentType:enum'
               - name: ParagraphType
                 uid: 'onenote!OneNote.ParagraphType:enum'
-          - name: 应用程序
+          - name: Application
             uid: 'onenote!OneNote.Application:class'
           - name: FloatingInk
             uid: 'onenote!OneNote.FloatingInk:class'
@@ -215,8 +215,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
