--- a/docs/docs-ref-autogen/outlook/outlook/office.attachmentdetails.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.attachmentdetails.yml
@@ -60,7 +60,10 @@ items:
         type:
           - 'outlook!Office.AttachmentDetails#attachmentType~0:complex'
   - uid: 'outlook!Office.AttachmentDetails#contentType:member'
-    summary: 获取附件的 MIME 内容类型。
+    summary: |-
+      获取附件的 MIME 内容类型。
+
+      此属性仅在读取模式下可用。
     name: contentType
     fullName: contentType
     langs:
