--- a/docs/docs-ref-autogen/outlook_1_7/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/toc.yml
@@ -62,7 +62,7 @@ items:
             uid: 'outlook!Office.Entities:interface'
           - name: From
             uid: 'outlook!Office.From:interface'
-          - name: 项目
+          - name: Item
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -80,11 +80,11 @@ items:
             uid: 'outlook!Office.NotificationMessageDetails:interface'
           - name: NotificationMessages
             uid: 'outlook!Office.NotificationMessages:interface'
-          - name: Organizer
+          - name: 组织者
             uid: 'outlook!Office.Organizer:interface'
           - name: PhoneNumber
             uid: 'outlook!Office.PhoneNumber:interface'
-          - name: 收件人
+          - name: Recipients
             uid: 'outlook!Office.Recipients:interface'
           - name: RecipientsChangedEventArgs
             uid: 'outlook!Office.RecipientsChangedEventArgs:interface'
@@ -228,8 +228,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
