--- a/docs/docs-ref-autogen/visio/toc.yml
+++ b/docs/docs-ref-autogen/visio/toc.yml
@@ -19,7 +19,7 @@ items:
                 uid: 'visio!Visio.OverlayVerticalAlignment:enum'
               - name: ToolBarType
                 uid: 'visio!Visio.ToolBarType:enum'
-          - name: 应用程序
+          - name: Application
             uid: 'visio!Visio.Application:class'
           - name: BoundingBox
             uid: 'visio!Visio.BoundingBox:interface'
@@ -187,8 +187,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
