--- a/docs/docs-ref-autogen/word/toc.yml
+++ b/docs/docs-ref-autogen/word/toc.yml
@@ -59,7 +59,7 @@ items:
                 uid: 'word!Word.UnderlineType:enum'
               - name: VerticalAlignment
                 uid: 'word!Word.VerticalAlignment:enum'
-          - name: 应用程序
+          - name: Application
             uid: 'word!Word.Application:class'
           - name: 正文
             uid: 'word!Word.Body:class'
@@ -113,7 +113,7 @@ items:
             uid: 'word!Word.Section:class'
           - name: SectionCollection
             uid: 'word!Word.SectionCollection:class'
-          - name: 设置
+          - name: Setting
             uid: 'word!Word.Setting:class'
           - name: SettingCollection
             uid: 'word!Word.SettingCollection:class'
@@ -245,8 +245,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
