--- a/docs/docs-ref-autogen/word_1_3/toc.yml
+++ b/docs/docs-ref-autogen/word_1_3/toc.yml
@@ -59,7 +59,7 @@ items:
                 uid: 'word!Word.UnderlineType:enum'
               - name: VerticalAlignment
                 uid: 'word!Word.VerticalAlignment:enum'
-          - name: 应用程序
+          - name: Application
             uid: 'word!Word.Application:class'
           - name: 正文
             uid: 'word!Word.Body:class'
@@ -233,8 +233,6 @@ items:
                 uid: 'office!Office.File:interface'
               - name: FileProperties
                 uid: 'office!Office.FileProperties:interface'
-              - name: 库
-                uid: 'office!Office.Gallery:interface'
               - name: GetBindingDataOptions
                 uid: 'office!Office.GetBindingDataOptions:interface'
               - name: GetFileOptions
